switch to libgd2 and create a test image

--- a/x16/CMakeLists.txt
+++ b/x16/CMakeLists.txt
@@ -9,6 +9,6 @@ set(PACKAGE_MINOR_VERSION "1")
 set(PACKAGE_BUILD_VERSION "0")
 set(PACKAGE_VERSION "${PACKAGE_MAJOR_VERSION}.${PACKAGE_MINOR_VERSION}.${PACKAGE_BUILD_VERSION}")
 
-find_package(PNG REQUIRED)
+find_library(LIBGD2_LIBRARY NAMES gd)
 
 add_subdirectory("src")
