how nice it is to code without producing what you actually wanted …

--- a/x16/CMakeLists.txt
+++ b/x16/CMakeLists.txt
@@ -10,5 +10,7 @@ set(PACKAGE_BUILD_VERSION "0")
 set(PACKAGE_VERSION "${PACKAGE_MAJOR_VERSION}.${PACKAGE_MINOR_VERSION}.${PACKAGE_BUILD_VERSION}")
 
 find_library(LIBGD2_LIBRARY NAMES gd)
+set(LOGO_FILENAME "logo.png"
+    CACHE STRING "filename of the created file")
 
 add_subdirectory("src")
