--- a/x16/src/x16_build.h.in
+++ b/x16/src/x16_build.h.in
@@ -15,6 +15,8 @@
 #define X16_COPYRIGHT_YEARS	"2012"
 #define X16_VERSION			"@PACKAGE_VERSION@"
 
+#define X16_LOGO_FILENAME	"@LOGO_FILENAME@"
+
 #endif	/* _X16_BUILD_H_ */
 
 /* vim: set noet sts=0 ts=4 sw=4 sr: */
